# error-lens-zed

./: .gitignore  Cargo.toml  README.md  extension.toml  rust-toolchain.toml
.cargo/: config.toml  lld-link.cmd
docs/: implementation-plan.md
src/: lib.rs
